# coop_loc

./: CMakeLists.txt  README.md  package.xml
launch/: base.launch  mapping.launch  maze.launch  team_init.launch  team_pose_est.launch  test.py  vicon.launch  video.launch  vrep_coop_loc.launch
launch/debug/: joy.launch  pose_est.launch
msg/: IMUwithMoving.msg
src/: add_moving_imu.py  coop_loc_EKF.py  ind.py  quaternion.py  sensor_meas.py  team_init.py  team_loc.py  vicon.py  visualize_vicon_data.py
