<?xml version="1.0"?>

<package>

  <name>coop_loc</name>
  <version>0.0.0</version>
  <description>Cooperative Multi-Robot Localization with a Low-cost Heterogenous Team</description>
  <maintainer email="brian.nemsick@eecs.berkeley.edu">brian</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>genmsg</run_depend>

</package>